force-app/main/default/objects/Cargo__c/Cargo__c.object-meta.xml
<CustomObject>
    <label>Cargo</label>
    <nameField>
        <label>Título do Cargo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cargos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>