force-app/main/default/objects/Cargo__c/fields/Cargo_Superior__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Superior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cargo Superior</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Cargo__c.Status__c</field>
            <operation>equals</operation>
            <value>APROVADO</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Cargo__c</referenceTo>
    <relationshipLabel>Subordinados</relationshipLabel>
    <relationshipName>Subordinados</relationshipName>
    <type>Lookup</type>
</CustomField>