force-app/main/default/objects/Cargo__c/fields/Cargos_Subordinados__c.field-meta.xml
<CustomField>
    <fullName>Cargos_Subordinados__c</fullName>
    <inlineHelpText>Está lista atualiza automaticamente conforme os cargos superiores são definidos</inlineHelpText>
    <label>Cargos Subordinados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>