force-app/main/default/objects/Cargo__c/fields/Categoria_1__c.field-meta.xml
<CustomField>
    <fullName>Categoria_1__c</fullName>
    <label>Categoria 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADMINISTRAÇÃO</fullName>
            </value>
            <value>
                <fullName>AGRICULTURA, PECUÁRIA, VETERINÁRIA</fullName>
            </value>
            <value>
                <fullName>ALIMENTAÇÃO / GASTRONOMIA</fullName>
            </value>
            <value>
                <fullName>ARQUITETURA, DECORAÇÃO, DESIGN</fullName>
            </value>
            <value>
                <fullName>ARTES</fullName>
            </value>
            <value>
                <fullName>AUDITORIA</fullName>
            </value>
            <value>
                <fullName>CIÊNCIAS, PESQUISA</fullName>
            </value>
            <value>
                <fullName>COMERCIAL, VENDAS</fullName>
            </value>
            <value>
                <fullName>COMÉRCIO EXTERIOR, IMPORTAÇÃO, EXPORTAÇÃO</fullName>
            </value>
            <value>
                <fullName>COMPRAS</fullName>
            </value>
            <value>
                <fullName>COMUNICAÇÃO, TV, CINEMA</fullName>
            </value>
            <value>
                <fullName>CONSTRUÇÃO, MANUTENÇÃO</fullName>
            </value>
            <value>
                <fullName>CONTÁBIL, FINANÇAS, ECONOMIA</fullName>
            </value>
            <value>
                <fullName>CULTURA, LAZER, ENTRETENIMENTO</fullName>
            </value>
            <value>
                <fullName>EDUCAÇÃO, ENSINO, IDIOMAS</fullName>
            </value>
            <value>
                <fullName>ENGENHARIA</fullName>
            </value>
            <value>
                <fullName>ESTÉTICA</fullName>
            </value>
            <value>
                <fullName>HOTELARIA, TURISMO</fullName>
            </value>
            <value>
                <fullName>INDUSTRIAL, PRODUÇÃO, FÁBRICA</fullName>
            </value>
            <value>
                <fullName>INFORMÁTICA, TI, TELECOMUNICAÇÕES</fullName>
            </value>
            <value>
                <fullName>JURÍDICA</fullName>
            </value>
            <value>
                <fullName>LOGÍSTICA</fullName>
            </value>
            <value>
                <fullName>MARKETING</fullName>
            </value>
            <value>
                <fullName>MEIO AMBIENTE, ECOLOGIA</fullName>
            </value>
            <value>
                <fullName>MODA</fullName>
            </value>
            <value>
                <fullName>QUALIDADE</fullName>
            </value>
            <value>
                <fullName>QUÍMICA, PETROQUÍMICA</fullName>
            </value>
            <value>
                <fullName>RECURSOS HUMANOS</fullName>
            </value>
            <value>
                <fullName>SAÚDE</fullName>
            </value>
            <value>
                <fullName>SEGURANÇA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>