force-app/main/default/objects/Cargo__c/fields/Categoria_2__c.field-meta.xml
<CustomField>
    <fullName>Categoria_2__c</fullName>
    <label>Categoria 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2BIOLOGIA</fullName>
            </value>
            <value>
                <fullName>2BIOTECNOLOGIA</fullName>
            </value>
            <value>
                <fullName>2GOVERNANÇA</fullName>
            </value>
            <value>
                <fullName>2METEOROLOGIA</fullName>
            </value>
            <value>
                <fullName>2PRODUÇÃO</fullName>
            </value>
            <value>
                <fullName>2QUÍMICA</fullName>
            </value>
            <value>
                <fullName>2RECEPÇÃO</fullName>
            </value>
            <value>
                <fullName>ACOMPANHANTE DE IDOSOS</fullName>
            </value>
            <value>
                <fullName>AÇOUGUE</fullName>
            </value>
            <value>
                <fullName>ACUPUNTURA</fullName>
            </value>
            <value>
                <fullName>ADMINISTRAÇÃO ESCOLAR, PEDAGOGIA</fullName>
            </value>
            <value>
                <fullName>ADMINISTRAÇÃO GERAL</fullName>
            </value>
            <value>
                <fullName>ADMINISTRADOR DE BANCO DE DADOS</fullName>
            </value>
            <value>
                <fullName>ADMINISTRADOR DE REDES</fullName>
            </value>
            <value>
                <fullName>ADVOCACIA GERAL</fullName>
            </value>
            <value>
                <fullName>AGRICULTURA</fullName>
            </value>
            <value>
                <fullName>AGRONOMIA, AGROBUSINESS</fullName>
            </value>
            <value>
                <fullName>AJUDANTE DE MOTORISTA</fullName>
            </value>
            <value>
                <fullName>ALMOXARIFADO</fullName>
            </value>
            <value>
                <fullName>ANÁLISE CLÍNICA</fullName>
            </value>
            <value>
                <fullName>ANÁLISE DE SISTEMA</fullName>
            </value>
            <value>
                <fullName>ANESTESIA</fullName>
            </value>
            <value>
                <fullName>ANGIOLOGIA</fullName>
            </value>
            <value>
                <fullName>ANIMAÇÃO / RECREAÇÃO CULTURAL</fullName>
            </value>
            <value>
                <fullName>ANTROPOLOGIA</fullName>
            </value>
            <value>
                <fullName>ARQUITETURA, URBANISMO</fullName>
            </value>
            <value>
                <fullName>ARQUITETURA DE SOLUÇÕES</fullName>
            </value>
            <value>
                <fullName>ARQUIVO</fullName>
            </value>
            <value>
                <fullName>ARQUIVOLOGIA</fullName>
            </value>
            <value>
                <fullName>ARTESANATO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>