force-app/main/default/objects/Cargo__c/fields/Objetivos__c.field-meta.xml
<CustomField>
    <fullName>Objetivos__c</fullName>
    <label>Objetivos do cargo</label>
    <length>450</length>
    <type>LongTextArea</type>
</CustomField>