force-app/main/default/objects/Cargo__c/fields/Requisitos_comportamentais__c.field-meta.xml
<CustomField>
    <fullName>Requisitos_comportamentais__c</fullName>
    <label>Requisitos comportamentais</label>
    <type>TextArea</type>
</CustomField>