force-app/main/default/objects/Cargo__c/fields/Requisitos_tecnicos__c.field-meta.xml
<CustomField>
    <fullName>Requisitos_tecnicos__c</fullName>
    <label>Requisitos técnicos</label>
    <type>TextArea</type>
</CustomField>