force-app/main/default/objects/Cargo__c/fields/responsabilidade1__c.field-meta.xml
<CustomField>
    <fullName>responsabilidade1__c</fullName>
    <inlineHelpText>Modelo obrigatório: Verbo + Como + Quando.
Ex: &quot;Conduzir entrevistas, aplicando testes e dinâmicas, sempre que houver vagas abertas.&quot;
Use frases curtas e objetivas.</inlineHelpText>
    <label>Responsabilidade 1:</label>
    <length>460</length>
    <type>LongTextArea</type>
</CustomField>