force-app/main/default/objects/Cargo__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDENTE</fullName>
                <default>true</default>
                <label>PENDENTE</label>
            </value>
            <value>
                <fullName>EM APROVAÇÂO</fullName>
            </value>
            <value>
                <fullName>APROVADO</fullName>
            </value>
            <value>
                <fullName>REPROVADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>