force-app/main/default/objects/Cargo__c/fields/Tipo_Formacao__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Formacao__c</fullName>
    <label>Tipo de Formação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ensino Médio</fullName>
            </value>
            <value>
                <fullName>Superior Cursando</fullName>
            </value>
            <value>
                <fullName>Superior Completo</fullName>
            </value>
            <value>
                <fullName>Pós Graduado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>