force-app/main/default/objects/Cargo__c/fields/Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Vigencia__c</fullName>
    <formula>ISPICKVAL(Status__c, &quot;APROVADO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vigência</label>
    <type>Checkbox</type>
</CustomField>