force-app/main/default/objects/Cargo__c/validationRules/Bloque_quando_aprovado.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloque_quando_aprovado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;APROVADO&quot;),
    AND(
        $User.ProfileId &lt;&gt; &quot;00eU4000003KiUb&quot;
    )
)</errorConditionFormula>
    <errorMessage>Somente o gerente de RH pode fazer edições em um cargo aprovado.</errorMessage>
</ValidationRule>