force-app/main/default/objects/Cargo__c/validationRules/Formacao_academica.validationRule-meta.xml
<ValidationRule>
    <fullName>Formacao_academica</fullName>
    <active>true</active>
    <errorConditionFormula>(
  ISPICKVAL(Tipo_Formacao__c, &quot;Superior Cursando&quot;) ||
  ISPICKVAL(Tipo_Formacao__c, &quot;Superior Completo&quot;) ||
  ISPICKVAL(Tipo_Formacao__c, &quot;Pós Graduado&quot;)
) &amp;&amp;
ISBLANK(Formacao_Necessaria__c)</errorConditionFormula>
    <errorDisplayField>Formacao_Necessaria__c</errorDisplayField>
    <errorMessage>Preencha a Formação Necessária</errorMessage>
</ValidationRule>