force-app/main/default/objects/Cargo__c/validationRules/Status_deve_comecar_como_pendente.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_deve_comecar_como_pendente</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() &amp;&amp; TEXT(Status__c) &lt;&gt; &quot;PENDENTE&quot;</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status deve começar como pendente.</errorMessage>
</ValidationRule>