force-app/main/default/objects/Cargo__c/listViews/C_pia_de_APROVADOS.listView-meta.xml
<ListView>
    <fullName>C_pia_de_APROVADOS</fullName>
    <columns>NAME</columns>
    <columns>Departamento__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Data_de_Aprovaco__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>EM APROVAÇÂO</value>
    </filters>
    <label>EM APROVAÇÃO</label>
</ListView>