force-app/main/default/objects/Cargo__c/listViews/GESTCOM.listView-meta.xml
<ListView>
    <fullName>GESTCOM</fullName>
    <columns>NAME</columns>
    <columns>Departamento__c</columns>
    <columns>Empresa__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Data_de_Aprovaco__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>APROVADO</value>
    </filters>
    <filters>
        <field>Empresa__c</field>
        <operation>contains</operation>
        <value>gestcom</value>
    </filters>
    <label>GESTCOM</label>
</ListView>