force-app/main/default/objects/Cargo__c/listViews/REPROVADOS.listView-meta.xml
<ListView>
    <fullName>REPROVADOS</fullName>
    <columns>NAME</columns>
    <columns>Departamento__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Data_de_Aprovaco__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>REPROVADO</value>
    </filters>
    <label>REPROVADOS</label>
</ListView>